--- a/admin/src/main/resources/static/settings/MeituanWaimaiAppSetting.html
+++ b/admin/src/main/resources/static/settings/MeituanWaimaiAppSetting.html
@@ -3,20 +3,20 @@
 
 </style>
 <form class="form-horizontal" id="form" s="form,datac,nda,valid" s-data="data" style="width: 600px;">
-    <!--<div class="form-group">-->
-        <!--<label class="col-sm-3 control-label">App id</label>-->
-        <!--<div class="col-sm-9">-->
-            <!--<input autocomplete="off" type="text" class="form-control" name="appId" placeholder="App Id"-->
-                   <!--s-valid-error="require()"/>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-        <!--<label class="col-sm-3 control-label">App Secret</label>-->
-        <!--<div class="col-sm-9">-->
-            <!--<input autocomplete="off" type="text" class="form-control" name="appSecret" placeholder="App Secret"-->
-                   <!--s-valid-error="require()"/>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="form-group">
+        <label class="col-sm-3 control-label">App id</label>
+        <div class="col-sm-9">
+            <input autocomplete="off" type="text" class="form-control" name="appId" placeholder="App Id"
+                   s-valid-error="require()"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label">App Secret</label>
+        <div class="col-sm-9">
+            <input autocomplete="off" type="text" class="form-control" name="appSecret" placeholder="App Secret"
+                   s-valid-error="require()"/>
+        </div>
+    </div>
     <div class="form-group">
         <label class="col-sm-3 control-label">订单支付通知接口</label>
         <div class="col-sm-9">
